kubernetes/apps/animals/arr-jellyfin-http-route-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: arr
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - jellyfin.animals.home.parents-basement.win
