kubernetes/apps/animals/arr-jellyfin-httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: arr
spec:
  hostnames:
    - jellyfin.animals.home.parents-basement.win
