kubernetes/apps/animals/redmanager-httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redmanager
  namespace: redmanager
spec:
  hostnames:
    - redmanager.animals.home.parents-basement.win
